2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py: patches by John Williams:
	htmlquote bugfix.
	Allow snippets to be given distinct filenames.
	Allow the default alt text to be overridden.

2005-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* configure.in (no gui_b): Remove optional gtk+ requirement.

2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/basic-notation.itely (Pitches): add
	LedgerLineSpanner.

	* lily/dynamic-engraver.cc (process_music): set right bound to
	script if present. Else, do not set.
	(acknowledge_grob): only set right bound of finished spanner to
	note column if no other bound is set.

	* python/lilylib.py (make_ps_images): switch back to png16m.
	
2005-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (write_if_updated): Bugfix for not
	writing up to date file.  Add dvips usage suggestion.

	* scripts/convert-ly.py: Fix error message.
	Print usage if no files on command line.
	(usage): Add example usage.

	* input/test/compound-time.ly: New file.

	* input/test/circle.ly: New file.

	* Documentation/topdocs/NEWS.tely: Use them.

	* input/test/boxed-stencil.ly: Remove \score.

	* buildscripts/mf-to-table.py (base): Add .log dependency.

	* mf/GNUmakefile: Add PFAemmentaler and PFAaybabtu dependencies on
	pfa's.  Add .log dependency

	* scm/define-markup-commands.scm (lower): New command.

	* elisp/lilypond-mode.el (LilyPond-pdf-command): New command,
	make it default.

2005-04-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/dynamic-engraver.cc (acknowledge_grob): add note-column
	also to finished cresc as right bound. This fixes:
	skip-string-decresc.ly

	* lily/slur-scoring.cc (get_bound_info): robustness: substitute
	relative_coordinate if extent is empty.

	* lily/stem.cc (width_callback): determine correct extent if flag
	is not there. This fixes slur-no-flag.ly

	* lily/grace-engraver.cc (consider_change_grace_settings): new function.