@@ -1,5 +1,7 @@
 2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/ledger-line-spanner.cc: some more words of explanation.
+
 	* scripts/lilypond-book.py: patches by John Williams:
 	htmlquote bugfix.
 	Allow snippets to be given distinct filenames.
